--- a/FAO-riskmapjnr/doc_prefix.tex
+++ b/FAO-riskmapjnr/doc_prefix.tex
@@ -2,30 +2,27 @@
 {
   \setbeamertemplate{navigation symbols}{}
   \begin{frame}[plain, noframenumbering]
+  
   \begin{center}
-  \small{\textbf{FAO -- IMPRESS project -- July, 2022}}
+  \small{\textbf{FAO -- IMPRESS project -- July 2022}}
   \end{center}
-  \vspace{-0.5cm}
+  \vspace{-1cm}
   \titlepage % Presentation first page
-  \vspace{-3cm}
+  \vspace{-3.5cm}
   \begin{center}
-    \includegraphics[width=\textwidth]{figs/Barre_couleur}
-    
-    \vspace{0.25cm}
-    
-    \includegraphics[width=10cm]{figs/Banniere}
-    
-    \small{Ghislain VIEILLEDENT}
-      
-    \vspace{0.25cm}
-    
+    \includegraphics[width=\textwidth]{figs/Barre_couleur}\\
+    \vspace{0.5cm}
+    \includegraphics[width=10cm]{figs/riskmapjnr-example}\\
+    \vspace{0.3cm}
+    \small{Ghislain VIEILLEDENT$^{1}$\hspace{0.25cm}Pierrick RAMBAUD$^{2}$\hspace{0.25cm}Rémi d'ANNUNZIO$^{2}$}\\
+    \vspace{0.15cm}
     {\scriptsize
       \begin{tabular}{l}
-        \textbf{Cirad} UMR AMAP
+        $[1]$ \textbf{Cirad} UMR AMAP, $[2]$ \textbf{FAO} REDD$+$ NFM
       \end{tabular}
-    }
-    
-    \includegraphics[width=0.45\textwidth]{figs/partners_logos}
+    }\\
+    \vspace{0.3cm}
+    \includegraphics[width=0.75\textwidth]{figs/partners_logos}
     
   \end{center}
   \end{frame}
